# ffmpeg_av_encap

./: CMakeLists.txt  README.md  main.cpp
audio_encap/: audio_engine.h
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
src/audio_encap/: audio_engine.cpp  audio_engine.h
