PROJECT(ffmpeg_av_encap)


SET(CMAKE_C_FLAGS "-O0 -g -ggdb -fPIC -std=gnu99")
SET(CMAKE_CXX_FLAGS "-O0 -g -ggdb -fPIC -std=c++11")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/audio_encap)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)


AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/audio_encap/. AUDIO_SRCS)
SET(SRC_LIST  main.cpp ${AUDIO_SRCS})

ADD_EXECUTABLE(test ${SRC_LIST})

TARGET_LINK_LIBRARIES(test avcodec)
TARGET_LINK_LIBRARIES(test avformat)
TARGET_LINK_LIBRARIES(test avutil)
TARGET_LINK_LIBRARIES(test avdevice)
TARGET_LINK_LIBRARIES(test swresample)
TARGET_LINK_LIBRARIES(test swscale)


